initial mixin work. 1 on mySite and 1 on surf paddle. fixed layout breakages and some nesting

--- a/mySite/styles.scss
+++ b/mySite/styles.scss
@@ -2,6 +2,10 @@ $red: #690307;
 $cream: #fffbda;
 $mainfont: 'tangerine';
 
+@mixin border-radius ($radius) {
+  border-radius: $radius;
+}
+
 body {
   padding: 0;
   margin: 0;
@@ -55,6 +59,15 @@ nav {
       margin: 0 24% 0 24%;
       list-style-text: none;
       color: $cream;
+      &:hover {
+        color: #b64926;
+      }
+      &:visited:hover {
+        color: $cream;
+      }
+      &:visited {
+        color: $cream;
+      }
     }
     }
   }
@@ -77,12 +90,11 @@ nav a:visited {
 .center {
   width: 90%;
   margin: 0 auto;
-}
-
-.center img {
-  width:100%;
-  border-radius: 30px;
-  box-shadow: 3px 3px 2px $red;
+  img {
+    width:100%;
+    @include border-radius (30px);
+    box-shadow: 3px 3px 2px $red;
+  }
 }
 
 .container {
@@ -98,14 +110,12 @@ nav a:visited {
   margin-left: 16% ;
   display: inline-block;
   vertical-align: top;
+  img {
+    float: clear;
+    width: 90%;
+    @include border-radius (100%);
+  }
 }
-
-.box img {
-  float: clear;
-  width: 90%;
-  border-radius: 100%;
-}
-
 
 /* about page */
 
@@ -114,7 +124,7 @@ nav a:visited {
   width: 30%;
   margin: 5px 5px 5px 5px;
   float: left;
-  border-radius: 20px;
+  @include border-radius (20px);
 }
 
 .dogs {
@@ -123,25 +133,22 @@ nav a:visited {
   margin-left: 3px;
   margin-right: auto;
   display: inline-block;
-}
-
-.dogs img {
-  margin: 3px 24% 3px 24%;
-  width: 50%;
-  border-radius: 100%;
-  box-shadow: 5px 5px 9px $red;
+  img {
+    margin: 3px 24% 3px 24%;
+    width: 50%;
+    @include border-radius (100%);
+    box-shadow: 5px 5px 9px $red;
+  }
 }
 
 .dogs a {
   color: $red;
-}
-
-.dogs a:hover {
-  color: $red;
-}
-
-.dogs a:visited {
-  color: $red;
+  :hover {
+    color: $red;
+  }
+  a:visited {
+    color: $red;
+  }
 }
 
 /*gallery page*/
@@ -154,15 +161,14 @@ nav a:visited {
   display: inline-block;
   vertical-align: top;
   text-align: center;
-  }
-
-  .webdev img {
+  img {
     margin:0;
     width: 125px;
     height: 125px;
-    border-radius: 30px;
+    @include border-radius (30px);
     box-shadow: 3px 3px 2px $red;
-    }
+  }
+  }
 
 .gallery {
   width:49%;
@@ -170,23 +176,21 @@ nav a:visited {
   padding: 0;
   display: inline-block;
   text-align: center;
-}
-
-  .gallery img {
+    img {
     width: 125px;
     height: 125px;
-    border-radius: 20px;
+    @include border-radius (20px);
     box-shadow: 3px 3px 2px $red;
     display: inline-block;
     margin: 0;
-  }
-
-  .gallery img:hover {
+    &:hover {
       position: absolute;
       transform: scale(3.0);
       display: inline-block;
-      border-radius: 20px;
+      @include border-radius (20px);
+    }
   }
+}
 
 /*--Responsive design below--*/
 
@@ -246,6 +250,7 @@ nav a:visited {
     display: block;
     margin: 0 auto;
   }
+}
 
 @media screen and (max-width: 500px) {
 
@@ -267,27 +272,30 @@ nav a:visited {
   .center {
     width: 100%;
     margin: 0;
+    display:block;
     font-family: sans-serif;
     font-size: 18px;
-  }
-
-  .center img {
+    -webkit-animation: open 2s;
+    -moz-animation: open 2s;
+    -o-animation: open 2s;
+    animation: open 2s;
+    img {
     width: 100%;
-    border-radius: 30px;
+    @include border-radius (30px);
     box-shadow: 0;
   }
+}
 
   .container {
-    width:50%;
+    width:100%;
     margin: 0;
     background-color: $cream;
     color: $red;
     font-family: sans-serif;
     font-size: 18px;
-}
-  .container h2 {
-    font-family: sans-serif;
+    h2 {
     font-size: 36px;
+}
 }
 
   .box {
@@ -297,22 +305,13 @@ nav a:visited {
     margin-left: 0;
     font-family: sans-serif;
     font-size: 18px;
-  .box img {
+    img {
     float: clear;
     width: 100%;
-    border-radius: 100%;
+    @include border-radius (100%);
   }
 }
-  .container {
-    width:100%;
-    margin: 0;
-    background-color: $cream;
-    color: $red;
-  }
 
-  .center {
-    display: block;
-  }
 
   .webdev img {
     width: 300px;
@@ -320,11 +319,12 @@ nav a:visited {
     box-shadow: none;
   }
 
-.gallery img {
+ .gallery img {
     width: 100%;
     height: 100%;
-    border-radius: 20px;
+    @include border-radius (20px);
     box-shadow: none;
     display: block;
     margin: 0 24% 0 24%;
+ }
 }
